--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" href="voltorb.svg">
 </head>
 <body style="margin: 0; background-color: #29A56B">
-	<canvas id="canvas" style="display: block; margin-left: auto; margin-right: auto"/>
+	<canvas id="canvas" style="display: block; margin-left: auto; margin-right: auto"></canvas>
 	<p id="text" style="color: white">Volume:</p>
 	<input type="range" id="volumeSlider" max="1" step="0.001" value="0.5">
 </body>
